[gd_scene load_steps=6 format=3 uid="uid://cfomjv7pmmwht"]

[ext_resource type="Script" path="res://scripts/forgot_password.gd" id="1_o8q22"]
[ext_resource type="FontFile" uid="uid://b4pkdf5nfix06" path="res://shared/fonts/Exo2-Regular.ttf" id="2_ms7ax"]
[ext_resource type="Theme" uid="uid://bt21n7e5vhsxq" path="res://shared/themes/auth_theme.tres" id="3_aymrw"]
[ext_resource type="Script" path="res://scripts/base_button.gd" id="4_0r5rx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qmm1w"]
bg_color = Color(0.270588, 0.482353, 0.615686, 1)

[node name="ForgotPassword" type="Node2D"]
script = ExtResource("1_o8q22")

[node name="BackgroundPanel" type="Panel" parent="."]
z_index = -10
offset_right = 1280.0
offset_bottom = 728.0
theme_override_styles/panel = SubResource("StyleBoxFlat_qmm1w")

[node name="TitleLabel" type="Label" parent="."]
offset_top = 48.0
offset_right = 1280.0
offset_bottom = 121.0
theme_override_colors/font_color = Color(0.945098, 0.980392, 0.933333, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("2_ms7ax")
theme_override_font_sizes/font_size = 60
text = "UNTITLED AUTO BATTLER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InputControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 720.0
offset_top = 288.0
offset_right = 760.0
offset_bottom = 328.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_aymrw")

[node name="EmailLabel" type="Label" parent="InputControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = -4.0
offset_right = -201.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
text = "Email"

[node name="EmailInput" type="LineEdit" parent="InputControl"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = 28.0
offset_right = 76.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Enter email"

[node name="ForgotPasswordButton" type="Button" parent="InputControl"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = 108.0
offset_right = 76.0
offset_bottom = 172.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_ms7ax")
theme_override_font_sizes/font_size = 40
text = "SEND REQUEST"
script = ExtResource("4_0r5rx")

[node name="AlertLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 448.0
offset_top = 496.0
offset_right = 832.0
offset_bottom = 624.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Alert goes here"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="GoToLogin" type="Button" parent="."]
offset_left = 464.0
offset_top = 624.0
offset_right = 816.0
offset_bottom = 688.0
focus_mode = 0
theme = ExtResource("3_aymrw")
text = "RETURN TO LOGIN"
script = ExtResource("4_0r5rx")

[connection signal="pressed" from="InputControl/ForgotPasswordButton" to="." method="_on_forgot_password_button_pressed"]
[connection signal="pressed" from="GoToLogin" to="." method="_on_go_to_login_pressed"]
